--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./styles/partners.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <header>
@@ -32,6 +33,9 @@
             <li><a href=""> Blog</a></li>
             <li><a href=""> Əlaqə </a></li>
           </ul>
+          <div class="hamburger">
+            <i class="fas fa-bars"></i>
+          </div>
         </nav>
         <div class="header-middle">
           <h1>Cybernetics</h1>
