scroll button and scroll links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="header-container container">
         <nav>
           <div class="logo">
@@ -23,15 +23,15 @@
           </div>
           <ul>
             <li>
-              <a href=""> Ana səhifə </a>
+              <a href="index.html"> Ana səhifə </a>
             </li>
-            <li><a href=""> Şirkət </a></li>
+            <li><a href="#info"> Şirkət </a></li>
             <li><a href=""> Əməliyyat mərkəzi </a></li>
             <li><a href=""> Tədris mərkəzi</a></li>
             <li><a href=""> İnnovasiya mərkəzi </a></li>
             <li><a href=""> Media </a></li>
             <li><a href=""> Blog</a></li>
-            <li><a href=""> Əlaqə </a></li>
+            <li><a href="#contact"> Əlaqə </a></li>
           </ul>
           <div class="hamburger">
             <i class="fas fa-bars"></i>
@@ -47,21 +47,33 @@
             </p>
           </h3>
           <div class="header-social-links">
-            <a href=""><i class="fab fa-github"></i></a>
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
-            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/cybernetics"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a href="https://www.facebook.com/Cybernetics/"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="https://twitter.com/cybernetics"
+              ><i class="fab fa-twitter"></i
+            ></a>
+            <a href="https://www.instagram.com/cybernetics.az/"
+              ><i class="fab fa-instagram"></i
+            ></a>
             <a href=""><i class="fab fa-linkedin-in"></i></a>
-            <a href=""><i class="fab fa-pinterest"></i></a>
+            <a href="https://pinterest.com/cybnernetics/"
+              ><i class="fab fa-pinterest"></i
+            ></a>
           </div>
         </div>
         <div class="header-button">
-          <button>Down</button>
+          <a href="#info">
+            <div class="scroll-down"></div>
+          </a>
         </div>
       </div>
     </header>
     <main>
-      <section class="info">
+      <section class="info" id="info">
         <div class="info-container container">
           <h2>Şirkət haqqında</h2>
           <div class="info-image-text">
@@ -92,13 +104,13 @@
               </p>
               <div class="info-buttons">
                 <button>ŞİRKƏTİN TƏQDİMATI</button>
-                <button>ƏLAQƏ SAXLAMAQ ÜÇÜN</button>
+                <a href="#contact"> <button>ƏLAQƏ SAXLAMAQ ÜÇÜN</button></a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="partners">
+      <section class="partners" id="partners">
         <div class="partners-container container">
           <h2>Tərəfdaşlar</h2>
           <div class="partners-cards">
@@ -143,7 +155,7 @@
           </div>
         </div>
       </section>
-      <section class="contact">
+      <section class="contact" id="contact">
         <div class="contact-container container">
           <h2>Əlaqə</h2>
           <p>
@@ -176,22 +188,32 @@
       <div class="footer-container container">
         <div class="footer-links">
           <div class="footer-icons">
-            <a href=""><i class="fab fa-github"></i></a>
+            <a href="https://github.com/cybernetics"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
           <div class="footer-icons">
-            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/Cybernetics/"
+              ><i class="fab fa-facebook"></i
+            ></a>
           </div>
           <div class="footer-icons">
-            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/cybernetics"
+              ><i class="fab fa-twitter"></i
+            ></a>
           </div>
           <div class="footer-icons">
-            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/cybernetics.az/"
+              ><i class="fab fa-instagram"></i
+            ></a>
           </div>
           <div class="footer-icons">
             <a href=""><i class="fab fa-linkedin-in"></i></a>
           </div>
           <div class="footer-icons">
-            <a href=""><i class="fab fa-pinterest"></i></a>
+            <a href="https://pinterest.com/cybnernetics/"
+              ><i class="fab fa-pinterest"></i
+            ></a>
           </div>
         </div>
         <p>Copyright © 2020 Cybernetics | Müəllif hüquqları qorunur.</p>
