--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cybernetics</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/header.css" />
@@ -13,8 +13,23 @@
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
     <link rel="stylesheet" href="./styles/responsive.css" />
+    <link rel="stylesheet" href="./styles/loader.css" />
   </head>
   <body>
+    <section class="loader">
+      <div class="loading">
+        <div class="dot" style="--i: 0"></div>
+        <div class="dot" style="--i: 1"></div>
+        <div class="dot" style="--i: 2"></div>
+        <div class="dot" style="--i: 3"></div>
+        <div class="dot" style="--i: 4"></div>
+        <div class="dot" style="--i: 5"></div>
+        <div class="dot" style="--i: 6"></div>
+        <div class="dot" style="--i: 7"></div>
+        <div class="dot" style="--i: 8"></div>
+        <div class="dot" style="--i: 9"></div>
+      </div>
+    </section>
     <header id="header">
       <div class="header-container container">
         <nav>
