fixing responsiveness and loader

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 >
               </p>
               <div class="info-buttons">
-                <button>ŞİRKƏTİN TƏQDİMATI</button>
+                <a href=""> <button>ŞİRKƏTİN TƏQDİMATI</button></a>
                 <a href="#contact"> <button>ƏLAQƏ SAXLAMAQ ÜÇÜN</button></a>
               </div>
             </div>
