fixing responsive error

--- a/index.html
+++ b/index.html
@@ -62,22 +62,26 @@
             </p>
           </h3>
           <div class="header-social-links">
-            <a href="https://github.com/cybernetics"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a href="https://www.facebook.com/Cybernetics/"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="https://twitter.com/cybernetics"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="https://www.instagram.com/cybernetics.az/"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://pinterest.com/cybnernetics/"
-              ><i class="fab fa-pinterest"></i
-            ></a>
+            <div class="header-rows">
+              <a href="https://github.com/cybernetics"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="https://www.facebook.com/Cybernetics/"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://twitter.com/cybernetics"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
+            <div class="header-rows">
+              <a href="https://www.instagram.com/cybernetics.az/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+              <a href="https://pinterest.com/cybnernetics/"
+                ><i class="fab fa-pinterest"></i
+              ></a>
+            </div>
           </div>
         </div>
         <div class="header-button">
@@ -202,33 +206,37 @@
     <footer>
       <div class="footer-container container">
         <div class="footer-links">
-          <div class="footer-icons">
-            <a href="https://github.com/cybernetics"
-              ><i class="fab fa-github"></i
-            ></a>
+          <div class="footer-rows">
+            <div class="footer-icons">
+              <a href="https://github.com/cybernetics"
+                ><i class="fab fa-github"></i
+              ></a>
+            </div>
+            <div class="footer-icons">
+              <a href="https://www.facebook.com/Cybernetics/"
+                ><i class="fab fa-facebook"></i
+              ></a>
+            </div>
+            <div class="footer-icons">
+              <a href="https://twitter.com/cybernetics"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
           </div>
-          <div class="footer-icons">
-            <a href="https://www.facebook.com/Cybernetics/"
-              ><i class="fab fa-facebook"></i
-            ></a>
-          </div>
-          <div class="footer-icons">
-            <a href="https://twitter.com/cybernetics"
-              ><i class="fab fa-twitter"></i
-            ></a>
-          </div>
-          <div class="footer-icons">
-            <a href="https://www.instagram.com/cybernetics.az/"
-              ><i class="fab fa-instagram"></i
-            ></a>
-          </div>
-          <div class="footer-icons">
-            <a href=""><i class="fab fa-linkedin-in"></i></a>
-          </div>
-          <div class="footer-icons">
-            <a href="https://pinterest.com/cybnernetics/"
-              ><i class="fab fa-pinterest"></i
-            ></a>
+          <div class="footer-rows">
+            <div class="footer-icons">
+              <a href="https://www.instagram.com/cybernetics.az/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </div>
+            <div class="footer-icons">
+              <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="footer-icons">
+              <a href="https://pinterest.com/cybnernetics/"
+                ><i class="fab fa-pinterest"></i
+              ></a>
+            </div>
           </div>
         </div>
         <p>Copyright © 2020 Cybernetics | Müəllif hüquqları qorunur.</p>
