changing all image format

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="header-container container">
         <nav>
           <div class="logo">
-            <img src="./assets/logo.png" alt="logo" />
+            <img src="./assets/logo.webp" alt="logo" />
           </div>
           <ul>
             <li>
@@ -97,7 +97,7 @@
           <h2>Şirkət haqqında</h2>
           <div class="info-image-text">
             <div class="info-image">
-              <img src="./assets/logo_main.png" alt="Main Logo" />
+              <img src="./assets/logo_main.webp" alt="Main Logo" />
             </div>
             <div class="info-text">
               <h3>İnformasiya təhlükəsizliyi texnologiyaları və xidməti.</h3>
@@ -135,7 +135,7 @@
           <div class="partners-cards">
             <div class="cards">
               <div class="card-image">
-                <img src="./assets/ia-logo.png" alt="IA Logo" />
+                <img src="./assets/ia-logo.webp" alt="IA Logo" />
               </div>
               <h5>İnnovasiya Agentliyi</h5>
               <p>
@@ -149,7 +149,7 @@
             </div>
             <div class="cards">
               <div class="card-image">
-                <img src="./assets/bg-tek-logo.png" alt="BG Logo" />
+                <img src="./assets/bg-tek-logo.webp" alt="BG Logo" />
               </div>
               <h5>BG TEK</h5>
               <p>
@@ -159,14 +159,14 @@
             </div>
             <div class="cards">
               <div class="card-image">
-                <img src="./assets/logo_main.png" alt="logo" />
+                <img src="./assets/logo_main.webp" alt="logo" />
               </div>
               <h5>Şirkətin adı</h5>
               <p>Fəaliyyəti haqqında qısa məlumat</p>
             </div>
             <div class="cards">
               <div class="card-image">
-                <img src="./assets/logo_main.png" alt="logo" />
+                <img src="./assets/logo_main.webp" alt="logo" />
               </div>
               <h5>Şirkətin adı</h5>
               <p>Fəaliyyəti haqqında qısa məlumat</p>
