logo format changing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <div class="header-container container">
         <nav>
           <div class="logo">
-            <img src="./assets/logo.webp" alt="logo" />
+            <a href="index.html">
+              <img src="./assets/logo.webp" alt="logo"
+            /></a>
           </div>
           <ul>
             <li>
