--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/loader.css" />
   </head>
   <body>
-    <section class="loader">
+    <section class="loader flex">
       <div class="loading">
         <div class="dot" style="--i: 0"></div>
         <div class="dot" style="--i: 1"></div>
@@ -58,7 +58,7 @@
             <i class="fas fa-bars"></i>
           </div>
         </nav>
-        <div class="header-middle">
+        <div class="header-middle flex">
           <h1>Cybernetics</h1>
           <h3>
             <p>
@@ -90,7 +90,7 @@
             </div>
           </div>
         </div>
-        <div class="header-button">
+        <div class="header-button flex">
           <a href="#info">
             <div class="scroll-down"></div>
           </a>
@@ -98,8 +98,8 @@
       </div>
     </header>
     <main>
-      <section class="info" id="info">
-        <div class="info-container container">
+      <section class="info flex" id="info">
+        <div class="info-container container flex">
           <h2>Şirkət haqqında</h2>
           <div class="info-image-text">
             <div class="info-image">
@@ -135,11 +135,11 @@
           </div>
         </div>
       </section>
-      <section class="partners" id="partners">
-        <div class="partners-container container">
+      <section class="partners flex" id="partners">
+        <div class="partners-container container flex">
           <h2>Tərəfdaşlar</h2>
           <div class="partners-cards">
-            <div class="cards">
+            <div class="cards flex">
               <div class="card-image">
                 <img src="./assets/ia-logo.webp" alt="IA Logo" />
               </div>
@@ -180,8 +180,8 @@
           </div>
         </div>
       </section>
-      <section class="contact" id="contact">
-        <div class="contact-container container">
+      <section class="contact flex" id="contact">
+        <div class="contact-container container flex">
           <h2>Əlaqə</h2>
           <p>
             <b> Cybernetics</b> şirkəti ilə əlaqəyə keçmək və bütün suallarınıza
@@ -190,18 +190,18 @@
             Təşəkkürlər
           </p>
           <div class="contact-text">
-            <div class="contact-text-icon">
+            <div class="contact-text-icon flex">
               <i class="fas fa-phone-alt"></i>
               <a href="tel://+994555123979">+994 55 512 3979</a>
             </div>
-            <div class="contact-text-icon">
+            <div class="contact-text-icon flex">
               <i class="fas fa-map-marker-alt"></i>
               <span
                 >Bakı şəhəri <br />
                 2H Mikail Müşviq küçəsi, AZ1004</span
               >
             </div>
-            <div class="contact-text-icon">
+            <div class="contact-text-icon flex">
               <i class="fas fa-envelope"></i>
               <a href="mailto://info@cybernetics.az">info@cybernetics.az</a>
             </div>
@@ -209,36 +209,36 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="footer-container container">
-        <div class="footer-links">
+    <footer class="flex">
+      <div class="footer-container container flex">
+        <div class="footer-links flex">
           <div class="footer-rows">
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href="https://github.com/cybernetics"
                 ><i class="fab fa-github"></i
               ></a>
             </div>
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href="https://www.facebook.com/Cybernetics/"
                 ><i class="fab fa-facebook"></i
               ></a>
             </div>
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href="https://twitter.com/cybernetics"
                 ><i class="fab fa-twitter"></i
               ></a>
             </div>
           </div>
           <div class="footer-rows">
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href="https://www.instagram.com/cybernetics.az/"
                 ><i class="fab fa-instagram"></i
               ></a>
             </div>
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <div class="footer-icons">
+            <div class="footer-icons flex">
               <a href="https://pinterest.com/cybnernetics/"
                 ><i class="fab fa-pinterest"></i
               ></a>
