--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./styles/loader.css" />
   </head>
   <body>
-    <section class="loader flex">
+    <section class="loader">
       <div class="loading">
         <div class="dot" style="--i: 0"></div>
         <div class="dot" style="--i: 1"></div>
